<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/textViewQuestionCounterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/spring_green"
        android:text="@string/quiz_question_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestionCounterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:text="@string/x_of_y"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textViewQuestionCounterText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:text="@string/test_question"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestionCounterValue" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestionCounterText" />

    <TextView
        android:id="@+id/textViewCurrentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/spring_green"
        android:text="@string/score_label"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="140dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRestartQuiz"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCurrentScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/spring_green"
        android:text="@string/_00"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:layout_marginRight="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRestartQuiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewCurrentScore" />

    <Button
        android:id="@+id/buttonAnswer1"
        android:layout_width="160dp"
        android:layout_height="110dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="195dp"
        android:text="@string/answer_1"
        android:backgroundTint="@color/spring_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestionCounterText" />

    <Button
        android:id="@+id/buttonAnswer2"
        android:layout_width="160dp"
        android:layout_height="110dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="195dp"
        android:text="@string/answer_2"
        android:backgroundTint="@color/spring_green"
        app:layout_constraintStart_toEndOf="@+id/buttonAnswer1"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestionCounterText" />

    <Button
        android:id="@+id/buttonAnswer3"
        android:layout_width="160dp"
        android:layout_height="110dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/spring_green"
        android:text="@string/answer_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnswer1" />

    <Button
        android:id="@+id/buttonAnswer4"
        android:layout_width="160dp"
        android:layout_height="110dp"
        android:layout_marginStart="31dp"
        android:backgroundTint="@color/spring_green"
        android:text="@string/answer_4"
        app:layout_constraintStart_toEndOf="@+id/buttonAnswer3"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnswer2" />

    <Button
        android:id="@+id/buttonRestartQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/spring_green"
        android:text="@string/restart"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/backToMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/spring_green"
        android:text="@string/button_main"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>