<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiActivity">

    <TextView
        android:id="@+id/bmiLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="@+id/bmiTextView"
        app:layout_constraintEnd_toEndOf="@+id/bmiTextView"
        app:layout_constraintStart_toStartOf="@+id/bmiTextView"
        app:layout_constraintTop_toTopOf="@+id/bmiTextView"/>

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:hint="@string/bmi_result"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"/>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barchart"
        android:layout_width="337dp"
        android:layout_height="317dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginTop="20dp"
        android:text="@string/bmi_add_data_point"
        app:layout_constraintBottom_toTopOf="@+id/returnToMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddToChart"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="@+id/heightEditText"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/result_background"
        android:digits="0123456789"
        android:elevation="@dimen/elevation"
        android:ems="10"
        android:gravity="fill_horizontal"
        android:hint="@string/enter_height"
        android:inputType="number"
        android:maxLength="3"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="@+id/bmiTextView"
        app:layout_constraintTop_toBottomOf="@+id/bmiLabelTextView" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/weight"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="@+id/weightEditText"
        app:layout_constraintTop_toBottomOf="@+id/weightEditText" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:digits="0123456789"
        android:elevation="@dimen/elevation"
        android:ems="10"
        android:gravity="fill_horizontal"
        android:hint="@string/enter_weight"
        android:inputType="number"
        android:maxLength="3"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="@+id/heightTextView"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

    <Button
        android:id="@+id/buttonAddToChart"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/add_to_chart"
        app:layout_constraintBottom_toTopOf="@+id/barchart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/bmiTextView"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

    <Button
        android:id="@+id/returnToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/spring_green"
        android:text="@string/button_main"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toBottomOf="@+id/barchart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>