<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bmiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/spring_green"
        android:text="@string/button_bmi"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/caloriesButton"
        app:layout_constraintStart_toStartOf="@+id/caloriesButton" />

    <Button
        android:id="@+id/caloriesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/spring_green"
        android:text="@string/button_calories"
        android:layout_marginTop="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recipesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/spring_green"
        android:text="@string/button_recipes"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/caloriesButton"
        app:layout_constraintTop_toBottomOf="@+id/caloriesButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
