<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaloriesCalcActivity">

    <Button
        android:id="@+id/chooseFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="@color/spring_green"
        android:text="@string/button_female"
        app:layout_constraintBottom_toTopOf="@+id/inputWeightLayout"
        app:layout_constraintEnd_toStartOf="@+id/chooseMale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chooseMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="@color/spring_green"
        android:text="@string/button_male"
        app:layout_constraintBottom_toTopOf="@+id/inputWeightLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toEndOf="@+id/chooseFemale"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputWeightLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="60dp"
        android:rotationX="360"
        android:textColorHint="@color/black"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@color/light_green"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/inputHeightLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputWeightView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="number"
            android:rotationX="360"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputHeightLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="60dp"
        android:rotationX="360"
        android:textColorHint="@color/black"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@color/light_green"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/inputAgeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWeightLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputHeightView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="number"
            android:rotationX="360"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAgeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="60dp"
        android:baselineAligned="false"
        android:rotationX="360"
        android:textColorHint="@color/black"
        app:endIconMode="clear_text"
        app:boxBackgroundColor="@color/light_green"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputHeightLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAgeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:rotationX="360"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calculateCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/spring_green"
        android:text="@string/button_calories"
        app:layout_constraintTop_toBottomOf="@+id/inputAgeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/showResult"
        android:layout_width="136dp"
        android:layout_height="47dp"
        android:background="@color/yellow"
        android:textAlignment="center"
        android:textSize="26dp"
        app:layout_constraintTop_toBottomOf="@+id/calculateCalories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/returnToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/spring_green"
        android:text="@string/button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>